--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,6 +78,12 @@ a:focus {
 	background: #2a4054;
 	border-radius: 20px 0 0 0;
 }
+.sidebar-header>div{
+	width: 200px;
+	height:200px ;
+    background-position: center;
+    margin: 20px auto 0 auto;
+}
 .fixed-sidebar {
 	position: fixed;
 	width: 15.8%;
