--- a/public/css/neo-style.css
+++ b/public/css/neo-style.css
@@ -1,56 +1,77 @@
 /* =============================== */
 /* css chung                       */
 /* =============================== */
-.dark-screen{
+.dark-screen {
     position: fixed;
     height: 100%;
     width: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 2;
 }
-.message{
+.message {
     position: fixed;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: white;
     z-index: 3;
     border-radius: 30px;
     padding: 30px;
 }
-.row-center>td{
-    padding-top:50px;
+.row-center > td {
+    padding-top: 50px;
 }
 
 /* =============================== */
 /* css giao vien diem danh         */
 /* =============================== */
 
-
-input[type=checkbox]{
+input[type="checkbox"] {
     transform: scale(2);
-} 
+}
 /* =============================== */
 /* css phong dao tao               */
 /* =============================== */
 /* trang import  */
-.nut-import{
+.nut-import {
     height: 150px;
     padding-top: 20px;
 }
-.nut-import p{
+.nut-import p {
     font-weight: bold;
     font-size: 1.3em;
 }
-.nut-import:hover{
-    background-color: #1EBD9E;
+.nut-import:hover {
+    background-color: #1ebd9e;
 }
-.list-after-import{
+.list-after-import {
     min-height: 500px;
     padding: 40px;
 }
 /* trang phan lop */
-.cong-cu-phan-lop,.ket-qua-phan-lop{
+.cong-cu-phan-lop,
+.ket-qua-phan-lop {
     padding: 40px;
 }
-
+/* ============================ */
+/* css student                  */
+/* ============================ */
+.title {
+    font-size: 2em;
+}
+.btn-link {
+    color: #1ebd9e;
+}
+.table-center > * > * {
+    text-align: center;
+}
+#ten-mon {
+    color: #1ebd9e;
+}
+#backward {
+    font-size: 2em;
+    float: right;
+    margin-right: 5vw;
+    transform: rotate(180deg);
+    color: #1ebd9e;
+}
