--- a/public/css/neo-style.css
+++ b/public/css/neo-style.css
@@ -26,9 +26,101 @@
 /* css giao vien diem danh         */
 /* =============================== */
 
-input[type="checkbox"] {
-    transform: scale(2);
+.nut-up{
+    position: fixed;
+    bottom: 10px;
+    right:10px;
+    color: #1ebd9e;
+    font-size: 2em;
+    z-index: 1;
+    opacity: 0.5;
+    transition: all 0.3s;
 }
+.nut-up:hover{
+    opacity: 1;
+    font-size: 2.5em;
+}
+
+#kiem-tra-tong{
+    display: none;
+}
+
+.confirm-switch {
+    width: 35px;
+    height: 17px;
+    border-radius: 8.5px;
+    background: #2a405430;
+    position: relative;
+    cursor: pointer;
+  }
+  
+  .confirm-switch input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+  }
+  
+  .confirm-switch input + label {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .confirm-switch input + label:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border-radius: 8.5px;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+    cursor: pointer;
+  }
+  
+  .confirm-switch input + label:after {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #fff;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+  }
+  
+  .confirm-switch input:checked + label:after {
+    left: 19px;
+  }
+  
+  .confirm-switch input:checked + label:before {
+    background: #2a4054;
+  }
+
+  .confirm-switch{
+      transform: scale(2);
+  }
 /* =============================== */
 /* css phong dao tao               */
 /* =============================== */
@@ -75,3 +167,6 @@ input[type="checkbox"] {
     transform: rotate(180deg);
     color: #1ebd9e;
 }
+
+/* ============================== */
+/*  */
