--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,7 +60,7 @@ a:focus {
 	align-items: stretch;
 }
 #sidebar {
-	width: 20%;
+	min-width: 17vw;
 }
 
 #sidebar.active {
@@ -79,7 +79,7 @@ a:focus {
 }
 .fixed-sidebar {
 	position: fixed;
-	width: 17vw;
+	min-width: 17vw;
 	height: 100vh;
 	background: #2a4054;
 	color: #fff;
@@ -218,7 +218,7 @@ a.article {
 
 @media (max-width: 1000px) {
 	#sidebar {
-		width: 0;
+		min-width: 0;
 	}
 	.fixed-sidebar {
 		left: -80%;
@@ -241,7 +241,7 @@ a.article {
 	}
 	.fixed-sidebar {
 		transition: all 0.3s;
-		width: 70%;
+		/* width: 70%; */
 	}
 }
 
