--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,7 +33,7 @@ a:focus {
 	background: #fff;
 	border: none;
 	border-radius: 0;
-	margin-bottom: 40px;
+	margin-bottom: 0px;
 	box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
@@ -102,6 +102,23 @@ a:focus {
 #sidebar ul.components svg {
 	margin-right: 0.5em;
 }
+
+#sidebar ul.components li{
+	position: relative;
+}
+#sidebar ul.components li:hover>ul{
+    display: inline;
+}
+#sidebar ul.components li ul{
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 100%;
+    width: 100%;
+    list-style: none;
+    padding: 0;
+}
+
 #sidebar ul p {
 	color: #fff;
 	padding: 10px;
@@ -125,6 +142,11 @@ a[aria-expanded="true"] {
 
 a[data-toggle="collapse"] {
 	position: relative;
+}
+
+#sidebar ul>li:hover>a {
+	color: #6c859e;
+    background: #fff;
 }
 
 .dropdown-toggle::after {
