--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -85,7 +85,7 @@ a:focus {
 	background: #2a4054;
 	color: #fff;
 	z-index: 2;
-	box-shadow: 5px 10px 10px #888888;
+	box-shadow: 0px 0px 10px black;
 }
 .fixed-sidebar.active {
 	left: 0;
