--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,7 +77,7 @@ a:focus {
 }
 .rounded-circle > img {
 	border-radius: 50%;
-	/* max-width: 17vw; */
+	max-width: 17vw;
 }
 .fixed-sidebar {
 	position: fixed;
@@ -268,6 +268,9 @@ a.article {
 	.fixed-sidebar {
 		transition: all 0.3s;
 		/* width: 70%; */
+	}
+	.rounded-circle > img {
+		max-width: 60vw;
 	}
 }
 
