--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,8 @@
-/*
-    DEMO STYLE
-*/
-
 @import "compass/css3";
-@import "https://fonts.googleapis.com/css?family=Poppins:300, 400, 500, 600, 700";
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 body {
-	font-family: "Poppins", sans-serif;
+
+	font-family: 'Lexend Deca', sans-serif;
 	background: #fafafa;
 }
 
@@ -14,9 +11,9 @@ body {
 }
 
 p {
-	font-family: "Poppins", sans-serif;
-	font-size: 1.1em;
-	font-weight: 300;
+	font-family: "Lexend Deca", sans-serif;
+	font-size: 1git pushem;
+	font-weight: 200;
 	line-height: 1.7em;
 	color: #999;
 }
@@ -78,6 +75,7 @@ a:focus {
 .rounded-circle > img {
 	border-radius: 50%;
 	max-width: 17vw;
+	margin: 0 auto;
 }
 .fixed-sidebar {
 	position: fixed;
@@ -237,6 +235,7 @@ a.article {
 	color: white;
 	font-size: 1.5rem;
 	padding: 1rem;
+	text-transform: uppercase;
 }
 /* ---------------------------------------------------
     MEDIAQUERIES
@@ -312,4 +311,14 @@ a.article {
 	padding: 30px;
 	background-color: white;
 	height: 100%;
+}
+
+
+.time-alert{
+	font-size: 0.8em;
+	color:#9e9e9e;
+}
+
+#dashboard-news{
+	overflow: auto;
 }
