--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@ body {
 
 p {
 	font-family: "Lexend Deca", sans-serif;
-	font-size: 1git pushem;
+	font-size: 1em;
 	font-weight: 200;
 	line-height: 1.7em;
 	color: #999;
